# ga

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
src/ga/: __init__.py
src/ga.egg-info/: PKG-INFO  SOURCES.txt
src/ga/ctest/: _ctest.cp313-win_amd64.pyd
src/ga/io/: __init__.py  serializer.py
src/ga/ipc/: __init__.py  ipc.py  redis_ipc.py  redis_shared_memory.py  shared_memory.py  web_socket_ipc.py
src/ga/tictoc/: tictoc.py
tests/: performance_guide.py  test_ctest.py  test_massive_dataset_performance.py  test_performance_comparison.py  test_performance_demo.py  test_redis_ipc.py  test_redis_shared_memory.py  test_serializer.py  test_shared_memory.py  test_tictoc_time.py
typings/blosc/: __init__.pyi  _version.pyi  test.pyi  toplevel.pyi
typings/snappy/: __init__.pyi  __main__.pyi  snappy.pyi  snappy_formats.pyi
