[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "ga"
version = "2025.10.19"
description = "Librerie di utilità generali per Python"
authors = [{ name="Andrea Gemma", email="andrea.gemma@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]
